Fix table rounded border being overlapped by content
And thus being invisible in the edges

--- a/resources/assets/sass/colors.scss
+++ b/resources/assets/sass/colors.scss
@@ -112,9 +112,9 @@ $description-text-color      : 'text-gray-800' !default;
 $description-text-color-dark : 'text-gray-200' !default;
 
 // TABLE COLORS
-$table-background-color                     : 'bg-white' !default;
+$table-background-color                     : 'bg-transparent' !default;
 $table-border-color                         : 'border-gray-300' !default;
-$table-head-background-color                : 'bg-gray-100' !default;
+$table-head-background-color                : 'bg-transparent' !default;
 $table-head-text-color                      : 'text-black' !default;
 $table-row-even-background-color            : 'bg-gray-50' !default;
 $table-row-odd-background-color             : 'bg-gray-100' !default;
@@ -122,11 +122,11 @@ $table-row-even-background-color-hover      : 'bg-gray-150' !default;
 $table-row-odd-background-color-hover       : 'bg-gray-200' !default;
 $table-row-border-color                     : 'border-gray-300' !default;
 
-$table-background-color-dark                : 'bg-gray-800' !default;
+$table-background-color-dark                : 'bg-transparent' !default;
 $table-border-color-dark                    : 'border-gray-650' !default;
-$table-head-background-color-dark           : 'bg-gray-700' !default;
+$table-head-background-color-dark           : 'bg-transparent' !default;
 $table-head-text-color-dark                 : 'text-gray-400' !default;
-$table-row-even-background-color-dark       : 'bg-gray-800' !default;
+$table-row-even-background-color-dark       : 'bg-transparent' !default;
 $table-row-odd-background-color-dark        : 'bg-gray-750' !default;
 $table-row-even-background-color-hover-dark : 'bg-gray-700' !default;
 $table-row-odd-background-color-hover-dark  : 'bg-gray-650' !default;
