--- a/resources/assets/sass/elements/_table.scss
+++ b/resources/assets/sass/elements/_table.scss
@@ -26,8 +26,17 @@
             }
 
             tr:last-child {
+                @apply rounded-b-lg;
                 td {
                     @apply border-none;
+
+                    &:first-child {
+                        @apply rounded-bl-lg;
+                    }
+
+                    &:last-child {
+                        @apply rounded-br-lg;
+                    }
                 }
             }
         }
